[package]
name = "realtime-shopping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.4.0" }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.27"
chrono = "0.4.24"
